@@ -5,6 +5,11 @@
 **Javafx**
 ```
 sudo apt install openjfx
-
 ```
 
+## Executable
+
+**Pour lancer l'executable lancer la commande**
+```
+java --module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.fxml -jar target/PFR2-1.0-SNAPSHOT-jar-with-dependencies.jar
+```
